# hyperbolic-plankton

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
docs/: baseline-planktonzilla-clip.md  bioscan-ablations.md  bioscan-fullft-clip-baseline.md  build-log.md  curvature-feasibility.md  experiment-plan.md  geometry-diagnostics.md  hac-implementation.md  planktonzilla.md  project-plan.md  ragged-taxonomy.md  related-work.md  rince-plan.md  taxonomy-counting.md
notebooks/: false_negatives.ipynb
scripts/: acceptance_test_eval.py  build_splits.py  cache_planktonzilla.py  delta_hyperbolicity.py  diag_and_horopca.sh  diagnose_geometry.py  eval_planktonzilla_clip.py  feasibility_sweep.py  filter_cache_kingdom.py  final_eval.py  ideal_hierarchy.py  log_final_eval_to_run.py  push_to_hf.py  run_ablations.sh  run_ablations_bioscan.sh  run_ablations_bioscan_v4.sh  run_ablations_euclidean.sh  run_ablations_hyperbolic.sh  run_b0c_batch1024.sh  run_detach_margin_bioscan.sh  run_diagnose_all.sh  run_euclidean_ft.sh  run_hybrid_angle_radial_bioscan.sh  run_hybrid_bioscan.sh  run_hybrid_dist_radial_bioscan.sh  run_hybrid_margin_bioscan.sh  run_lrclsel_margin_bioscan.sh  run_negmargin_bioscan.sh  run_rlh_batch1024.sh  run_sel_gaps_bioscan.sh  run_sel_margin_bioscan.sh  run_tau_matched_bioscan.sh  run_tau_sweep_bioscan.sh  run_unseen_eval.py  run_visualisations.sh  synthetic_geometry_oracle.py  train_euclidean_ft.py  train_lora.py  visualize_horopca.py
tests/: test_data.py  test_eval.py  test_lora.py  test_lorentz.py  test_loss.py  test_model.py  test_optim.py  (+2 more)
(+64 files in other folders)
